<resources>
    <string name="app_name">Personal-Coach</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title">計算你/妳的BMI值</string>
    <string name="text1">身高(m)：</string>
    <string name="text2">體重(kg)：</string>
    <string name="text3">男性/女性：</string>

    <string name="Female">女性</string>
    <string name="Male">男性</string>
    <string name="compute">計算BMI值</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="beginButton">Click To Start</string>

    <string name="abdomen">腹部：仰臥起坐</string>
    <string name="leg">腿部：深蹲</string>
    <string name="chest">胸部：伏地挺身</string>
    <string name="hip">臀部：臀橋</string>
    <string name="back">背部：俯臥背身</string>

</resources>

