<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/head">

        <Button
            android:id="@+id/label"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="計算BMI"
            android:textColor="#2ecc71"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/text1"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textStyle="bold" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/text2"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textStyle="bold" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="137dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/text3"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="296dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/Male"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="94dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Female"
                        android:textStyle="bold" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="日期："
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date"
                    android:textStyle="bold" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <Button
                android:id="@+id/button1"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compute"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <!--    側邊攔    -->
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/layer_bg">

        <Button
            android:id="@+id/mainmenuButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="110dp"
            android:text="首頁" />

        <Button
            android:id="@+id/RecordButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="160dp"
            android:text="紀錄" />

        <Button
            android:id="@+id/BMIbutton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="210dp"
            android:text="BMI計算" />


    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>